infra/kubernetes/backend.deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: server
          image: $REPO/$PROJECT.server:$TAG
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 80
