infra/kubernetes/mysql.deployment.yml
apiVersion: apps/v1
kind: Deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: database
          image: mysql:5.7.28
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
