infra/kubernetes/backend.service.yml
apiVersion: v1
kind: Service
spec:
  type: LoadBalancer
  ports:
    - port:       80
      targetPort: 80
  selector:
    app:  backend
    tier: frontend
